// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jdcFNC"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP gNGWDJ"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte kXAneV"
      disabled={true}
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP osJpP"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jGkDhg"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jfAIKn"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP kgZFeF"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc bIvtxC"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jdcFNC"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP gNGWDJ"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP osJpP"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jdcFNC"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP gNGWDJ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP osJpP"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jdcFNC"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP gNGWDJ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP osJpP"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jdcFNC"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ jNnjXG"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP gNGWDJ"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ jNnjXG"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP osJpP"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fkFYRF breKGv"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ jNnjXG"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP jdcFNC"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP gNGWDJ"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja gxalGF"
      >
        <input
          className="sc-jVCNtP cyEfFa"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        medium
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP feIGjx"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <label
        className="sc-htiqpR eHTlmp"
      >
        large
      </label>
      <div
        className="sc-gdfmja kcqQIc"
      >
        <input
          className="sc-jVCNtP rescm"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-cyxtte lmCjlL"
    >
      <div
        className="sc-gdfmja kgATBq"
      >
        <input
          className="sc-jVCNtP osJpP"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-fkFYRF bjQJbQ"
        >
          xlarge
        </label>
        <div
          className="sc-bsixGQ giuPWp"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-dAKPfc eiDmBe"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
